--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -14,4 +14,16 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
     }
+
+    location ~ /\.(?!well-known).* {
+        deny all;
+    }
+
+    location ~ /\.ht {
+        deny all;
+    }
+
+    location ~ /.well-known {
+        allow all;
+    }
 }
