docker-compose: remove versioning since its no longer required

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -26,4 +26,11 @@ server {
     location ~ /.well-known {
         allow all;
     }
+
+    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
+        expires 30d;
+        access_log off;
+        add_header Cache-Control "public";
+    }
+
 }
