--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,15 +2,16 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile
-    image: blog-app
-    container_name: blog-app
+      dockerfile: Dockerfile.dev
+    image: blog-app-dev
+    container_name: blog-app-dev
     restart: unless-stopped
     ports:
       - "8000:80"
+      - "5173:5173"
     environment:
-      - APP_ENV=production
-      - APP_DEBUG=false
+      - APP_ENV=local
+      - APP_DEBUG=true
       - APP_URL=http://localhost
       - DB_CONNECTION=mysql
       - DB_HOST=db
@@ -21,12 +22,16 @@ services:
       - RUN_MIGRATIONS=true
       - RUN_SEEDERS=false
       - COMPOSER_ALLOW_SUPERUSER=1
+      - VITE_HMR_HOST=localhost
     depends_on:
       db:
         condition: service_healthy
     networks:
       - blog-network
     volumes:
+      - ./:/var/www/html
+      - /var/www/html/vendor
+      - /var/www/html/node_modules
       - ./storage/app/public:/var/www/html/storage/app/public
       - ./storage/logs:/var/www/html/storage/logs
 
