--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,7 +12,7 @@ services:
     environment:
       - APP_ENV=local
       - APP_DEBUG=true
-      - APP_URL=http://localhost
+      - APP_URL=http://localhost:8000
       - DB_CONNECTION=mysql
       - DB_HOST=db
       - DB_PORT=3306
@@ -40,7 +40,7 @@ services:
     container_name: blog-db
     restart: unless-stopped
     ports:
-      - "3306:3306"
+      - "3307:3306"
     environment:
       - MYSQL_DATABASE=${DB_DATABASE:-laravel}
       - MYSQL_USER=${DB_USERNAME:-laravel}
