--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,22 +7,22 @@ services:
     container_name: blog-app-dev
     restart: unless-stopped
     ports:
-      - "8000:80"
-      - "5173:5173"
+      - "${APP_PORT:-8000}:80"
+      - "${VITE_PORT:-5173}:5173"
     environment:
-      - APP_ENV=local
-      - APP_DEBUG=true
-      - APP_URL=http://localhost:8000
-      - DB_CONNECTION=mysql
+      - APP_ENV=${APP_ENV:-local}
+      - APP_DEBUG=${APP_DEBUG:-true}
+      - APP_URL=${APP_URL:-http://localhost:8000}
+      - DB_CONNECTION=${DB_CONNECTION:-mysql}
       - DB_HOST=db
       - DB_PORT=3306
       - DB_DATABASE=${DB_DATABASE:-laravel}
       - DB_USERNAME=${DB_USERNAME:-laravel}
       - DB_PASSWORD=${DB_PASSWORD:-password}
-      - RUN_MIGRATIONS=true
-      - RUN_SEEDERS=false
+      - RUN_MIGRATIONS=${RUN_MIGRATIONS:-true}
+      - RUN_SEEDERS=${RUN_SEEDERS:-false}
       - COMPOSER_ALLOW_SUPERUSER=1
-      - VITE_HMR_HOST=localhost
+      - VITE_HMR_HOST=${VITE_HMR_HOST:-localhost}
     depends_on:
       db:
         condition: service_healthy
